--- a/css/style-lazyload.scss
+++ b/css/style-lazyload.scss
@@ -1,6 +1,6 @@
 a.lazy-load-youtube, .lazy-load-vimeo {
 	background: #000;
-	min-height: 315px;
+	height: 315px;
 	max-width: 100%;
 	background-size: contain!important; /* alternative: "cover" */
 	text-decoration: none;
@@ -24,10 +24,10 @@ a.lazy-load-youtube:hover, .lazy-load-vimeo:hover {
 	opacity: 1;
 }
 .lazy-load-youtube-div {
-	background: url(images/play-youtube.png) center center no-repeat;
+	background: url(../../images/play-youtube.png) center center no-repeat;
 }
 .lazy-load-vimeo-div {
-	background: url(images/play-youtube.png) center center no-repeat;
+	background: url(../../images/play-youtube.png) center center no-repeat;
 }
 .titletext {
 	padding-left: 15px;
