Bugfix: On some sites the plugin did not work as expected because a CSS height was not defined

--- a/css/style-lazyload.scss
+++ b/css/style-lazyload.scss
@@ -1,6 +1,7 @@
 a.lazy-load-youtube, .lazy-load-vimeo {
 	background: #000;
 	height: 315px;
+	width: 900px;
 	max-width: 100%;
 	background-size: contain!important; /* alternative: "cover" */
 	text-decoration: none;
