--- a/css/style-lazyload.scss
+++ b/css/style-lazyload.scss
@@ -1,7 +1,7 @@
 a.lazy-load-youtube, .lazy-load-vimeo {
 	background: #000;
 	height: 315px;
-	width: 900px;
+	width: 100%;
 	max-width: 100%;
 	background-size: contain!important; /* alternative: "cover" */
 	text-decoration: none;
