Bugfix: Youtube videos displayed title 'undefined' for older posts that have not been updated since the newest plugin version

--- a/css/style-lazyload.scss
+++ b/css/style-lazyload.scss
@@ -63,7 +63,7 @@ a.lazy-load-youtube:hover, .lazy-load-vimeo:hover {
 	text-transform: none;
 	font-weight: normal;
 }
-p a.lazyload-info-icon, .lazyload-info-icon {
+.entry-content a.lazyload-info-icon, p a.lazyload-info-icon, .lazyload-info-icon {
     width: 19px;
     height: 0;
     line-height: 19px;
