--- a/css/style-lazyload.scss
+++ b/css/style-lazyload.scss
@@ -16,7 +16,7 @@ $z-index-base: 2;
 // }
 //    @include vendor-prefix( border-radius, 50% );
 
-a.lazy-load-youtube, .lazy-load-vimeo {
+.entry-content a.lazy-load-youtube, a.lazy-load-youtube, .lazy-load-vimeo {
 	background: #000;
 	height: 315px;
 	width: 100%;
