Added option to remove branding

--- a/css/admin.scss
+++ b/css/admin.scss
@@ -167,6 +167,12 @@ div#informations div#text li.center {
 .newred.grey{
 	color:#999;
 }
+.newred_dot{
+	color: red;
+	position: relative;
+	left: 3px;
+	top: 1px;
+}
 
 #mc_embed_signup label {
 	color: green;
