--- a/css/style-lazyload.scss
+++ b/css/style-lazyload.scss
@@ -28,6 +28,47 @@ $z-index-base: 2;
 	font-family: Arial, serif;
 	font-size: 14px;
 }
+
+.lazy-load-youtube-div {
+	&:before, &::before {
+		// Button v1
+		content: "\25B6";
+		font-size: 50px;
+		font-family: Arial, sans-serif;
+		left: 47%;
+
+		// Button v2
+		// font-size: 0;
+		// $var_border: 50px;
+		// border-top: $var_border * 5/8 solid transparent;
+		// border-bottom: $var_border * 5/8 solid transparent;
+		// border-left: $var_border solid $white;
+		// margin-left: -$var_border * 0.5;
+		// content: "\00a0";
+		// left: 50%;
+
+		// General styling
+		color: $white;
+		opacity: 0.7;
+		position: relative;
+		top: 38%;
+		z-index: $z-index-base + 1;
+		text-shadow: 0px 0px 60px rgba(0,0,0,0.8);
+	}
+	&:hover:before {
+		opacity: 0.9;
+		text-shadow: 0px 0px 60px rgba(0,0,0,0.5);
+	}
+}
+.lazy-load-vimeo {
+	&:after, &::after {
+		@extend .lazy-load-youtube-div:before;
+	}
+	&:hover:after {
+		@extend .lazy-load-youtube-div:hover:before;
+	}
+}
+
 a.lazy-load-youtube:hover, .lazy-load-vimeo:hover {
 	text-decoration: none;
 	cursor: pointer;
@@ -47,12 +88,7 @@ a.lazy-load-youtube:hover, .lazy-load-vimeo:hover {
 .lazy-load-youtube-div:hover, .lazy-load-vimeo-div:hover, .lazy-load-youtube:hover > div {
 	opacity: 1;
 }
-.lazy-load-youtube-div {
-	background: url(../../images/play-youtube.png) center center no-repeat;
-}
-.lazy-load-vimeo-div {
-	background: url(../../images/play-youtube.png) center center no-repeat;
-}
+
 .titletext {
 	padding-left: 15px;
 	padding-right: 15px;
