--- a/css/style-lazyload.scss
+++ b/css/style-lazyload.scss
@@ -90,7 +90,8 @@ a.lazy-load-youtube:hover, .lazy-load-vimeo:hover {
 	text-transform: none;
 	font-weight: normal;
 }
-.entry-content a.lazyload-info-icon, p a.lazyload-info-icon, .lazyload-info-icon {
+.entry-content a.lazyload-info-icon, p a.lazyload-info-icon, a.lazyload-info-icon, .lazyload-info-icon,
+.entry-content a.lazyload-info-icon:visited, p a.lazyload-info-icon:visited, a.lazyload-info-icon:visited, .lazyload-info-icon:visited {
     width: 19px;
     height: 0;
     line-height: 19px;
