--- a/css/style-lazyload.scss
+++ b/css/style-lazyload.scss
@@ -122,3 +122,9 @@ a.lazy-load-youtube:hover, .lazy-load-vimeo:hover {
       text-decoration: none;
     }
 }
+
+.container-youtube embed, .container-youtube iframe, .container-youtube object, .container-youtube video,
+.container-vimeo embed, .container-vimeo iframe, .container-vimeo object, .container-vimeo video,
+a.lazy-load-youtube, .lazy-load-vimeo {
+	margin-bottom: 0!important;
+}
