--- a/css/style-lazyload.scss
+++ b/css/style-lazyload.scss
@@ -54,7 +54,7 @@ $z-index-base: 2;
 		text-shadow: 0px 0px 60px rgba(0,0,0,0.5);
 	}
 }
-.lazy-load-vimeo {
+.preview-vimeo {
 	display: table;
 	&:after, &::after {
 		@extend .lazy-load-youtube-div:before;
