CSS: Assigned some code to more specific preview classes; now .lazy-load-youtube-div extends .preview-vimeo

--- a/css/style-lazyload.scss
+++ b/css/style-lazyload.scss
@@ -33,9 +33,9 @@ $z-index-base: 2;
 	font-size: 14px;
 }
 
-.lazy-load-youtube-div {
+.preview-vimeo {
 	display: table;
-	&:before, &::before {
+	&:after, &::after {
 		content: "\25B6";
 		font-size: 50px;
 		font-family: Arial, sans-serif;
@@ -49,18 +49,19 @@ $z-index-base: 2;
 		vertical-align: middle;
 		text-align: center;
 	}
-	&:hover:before {
+	&:hover:after {
 		opacity: 0.9;
 		text-shadow: 0px 0px 60px rgba(0,0,0,0.5);
 	}
 }
-.preview-vimeo {
+
+.preview-youtube .lazy-load-youtube-div {
 	display: table;
-	&:after, &::after {
-		@extend .lazy-load-youtube-div:before;
+	&:before, &::before {
+		@extend .preview-vimeo:after;
 	}
-	&:hover:after {
-		@extend .lazy-load-youtube-div:hover:before;
+	&:hover:before {
+		@extend .preview-vimeo:hover:after;
 	}
 }
 
@@ -126,5 +127,5 @@ a.lazy-load-youtube:hover, .lazy-load-vimeo:hover {
 .container-youtube embed, .container-youtube iframe, .container-youtube object, .container-youtube video,
 .container-vimeo embed, .container-vimeo iframe, .container-vimeo object, .container-vimeo video,
 a.lazy-load-youtube, .lazy-load-vimeo {
-	margin-bottom: 0!important;
+	margin-bottom: 5px!important;
 }
