--- a/css/admin.scss
+++ b/css/admin.scss
@@ -237,6 +237,10 @@ div#informations div#text li.center {
 	color: #f90;
 }
 
+#mc_embed_signup {
+	clear: both;
+}
+
 #mc_embed_signup label {
 	color: green;
 	line-height: 2.5em;
