Changed the background colour of loading preview images from black to transparent

--- a/css/style-lazyload.scss
+++ b/css/style-lazyload.scss
@@ -39,7 +39,7 @@ $z-index-base: 2;
 }
 
 .entry-content a.lazy-load-youtube, a.lazy-load-youtube, .lazy-load-vimeo {
-	background: #000;
+	background: transparent;
 	height: 315px;
 	width: 100%;
 	max-width: 100%;
