Wait with displaying preview image until initial resize is done

--- a/css/style-lazyload.scss
+++ b/css/style-lazyload.scss
@@ -44,6 +44,10 @@ $z-index-base: 2;
     }
 }
 
+.preview-lazyload {
+  opacity: 1;
+  @include vendor-prefix(transition, opacity 0.25s);
+}
 .js-lazyload--not-loaded .preview-lazyload {
     opacity: 0;
 }
