--- a/modules/lazyload-all/styles.scss
+++ b/modules/lazyload-all/styles.scss
@@ -21,14 +21,20 @@ $z-index-base: 2;
     }
 }
 
+.js-lazyload--not-loaded .preview-lazyload {
+	opacity: 0;
+}
+
 .preview-lazyload {
   opacity: 1;
   position: relative;
   transition: opacity 0.25s;
-}
 
-.js-lazyload--not-loaded .preview-lazyload {
-    opacity: 0;
+  img {
+	object-fit: cover;
+	height: 100%;
+	width: 100%;
+  }
 }
 
 .entry-content a.lazy-load-youtube, a.lazy-load-youtube, .lazy-load-vimeo {
