--- a/modules/admin/admin-options.scss
+++ b/modules/admin/admin-options.scss
@@ -93,7 +93,8 @@ p.notice {
 .ui-tabs-nav li a {
 	padding: 4px 20px 6px;
 	font-weight: bold;
-	background: url(./images/gray-grad.png) repeat-x scroll left top #DFDFDF;
+	background: #DFDFDF;
+	background: linear-gradient(0deg, rgba(223,223,223,1) 0%, rgba(236,236,236,1) 100%);
 	text-shadow: 0 1px 0 #FFFFFF;
 }
 
@@ -206,7 +207,8 @@ div#informations {
 }
 
 div#informations div#titel {
-	background: url(./images/gray-grad.png) repeat-x scroll left top #DFDFDF;
+	background: #DFDFDF;
+	background: linear-gradient(0deg, rgba(223,223,223,1) 0%, rgba(236,236,236,1) 100%);
 	border-bottom: 1px solid #ddd;
 	text-shadow: 0 1px 0 #fff;
 	padding:5px;
