--- a/modules/admin/admin-options.scss
+++ b/modules/admin/admin-options.scss
@@ -145,7 +145,7 @@ p.notice {
 	display: none;
 }
 
-div#content {
+#content {
 	min-width:910px;
 }
 table {
@@ -189,15 +189,15 @@ input.regular-text {
 	width:100%;
 }
 
-div#reset label {
+#reset label {
 	color:#000;
 }
 
-div#floatleft {
+#floatleft {
 	float:left;
 }
 
-div#informations {
+#informations {
 	margin: 20px 0 10px 10px;
 	width: 170px;
  	border-color: #ddd;
@@ -206,7 +206,7 @@ div#informations {
 	border-width: 1px;
 }
 
-div#informations div#titel {
+#informations #titel {
 	background: #DFDFDF;
 	background: linear-gradient(0deg, rgba(223,223,223,1) 0%, rgba(236,236,236,1) 100%);
 	border-bottom: 1px solid #ddd;
@@ -215,24 +215,24 @@ div#informations div#titel {
 	text-align:center;
 }
 
-div#informations div#text {
+#informations #text {
 	padding:5px;
 	text-align:center;
 }
 
-div#informations div#text img.profilpic {
+#informations #text img.profilpic {
 	float:right;
 	width:38px;
 	height:50px;
 }
-div#informations div#text li {
+#informations #text li {
 	text-align:left;
 	border-bottom:1px solid #ddd;
 	margin-bottom:4px;
 	padding-bottom:2px;
 }
 
-div#informations div#text li.center {
+#informations #text li.center {
 	text-align:center;
 }
 
