--- a/modules/lazyload-all/styles.scss
+++ b/modules/lazyload-all/styles.scss
@@ -57,15 +57,14 @@ a.lazy-load-vimeo {
 	width: 100%;
 
 	&::before {
-		content: "\25B6";
+		// NOTE: Don't set a content, color text-shadow value here as we set it in frontend/class-frontend-init-styles.php and the browser would otherwise ignore that inline CSS style.
+		// Without content value, the before pseudo-element won't become visible.
 		font-size: 50px;
 		font-family: Arial, sans-serif;
-		color: $white;
 
 		opacity: 0.7;
 		z-index: $z-index-base + 1;
-		text-shadow: 0px 0px 60px rgba(0,0,0,0.8);
-
+		
 		display: table-cell;
 		vertical-align: middle;
 		text-align: center;
@@ -73,7 +72,6 @@ a.lazy-load-vimeo {
 
 	&:hover::before {
 		opacity: 0.9;
-		text-shadow: 0px 0px 60px rgba(0,0,0,0.5);
 	}
 }
 
