Remove Margin on new tabs

--- a/src/frontend/admin/admin-options.scss
+++ b/src/frontend/admin/admin-options.scss
@@ -288,3 +288,8 @@ input.regular-text {
 .clear-both {
 	clear: both;
 }
+
+// Remove bottom margin on "new" tabs
+li.nav-tab {
+  margin-bottom: 0;
+}
